--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.apache.kafka:kafka-streams'
-    implementation 'junit:junit:4.13.1'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'br.com.caelum.stella:caelum-stella-core:2.1.5'
+
+	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.12'
+	implementation 'org.springdoc:springdoc-openapi-webflux-core:1.6.12'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 	testImplementation 'io.projectreactor:reactor-test'
+	implementation 'junit:junit:4.13.1'
 }
 
 tasks.named('test') {
